# swc_macro_sys

./: .gitignore  Cargo.toml  README.md  bundler-chunk.js  example_wasm_usage.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simple-webpack-shake.mjs  test-conditional-simple.mjs  test-debug-feature-extraction.mjs  test-feature-detection.mjs  test-final-verification.mjs  test-mixed-config.mjs  test-tree-shaking.mjs  test.js  vitest.config.js
crates/swc_macro_condition_transform/: Cargo.toml
crates/swc_macro_condition_transform/examples/: transform.rs
crates/swc_macro_condition_transform/src/: directive.rs  feature_analyzer.rs  lib.rs  meta_data.rs  mutation_tracker.rs  optimization_pipeline.rs  webpack_module_graph.rs  webpack_tree_shaker.rs
crates/swc_macro_parser/: Cargo.toml
crates/swc_macro_wasm/: Cargo.toml
crates/swc_macro_wasm/examples/: transform.rs
crates/swc_macro_wasm/src/: dce.rs  lib.rs  optimize.rs
crates/webpack_graph/: Cargo.toml  README.md
crates/webpack_graph/examples/: analyze_bundle.rs
crates/webpack_graph/src/: error.rs  graph.rs  lib.rs  parser.rs
examples/: jsx-test-server.mjs  package.json
examples/jsx-server-demo/: jsx-test-server.mjs  package-lock.json  package.json
examples/rsbuild-project/: package-lock.json  package.json  rsbuild.config.ts
test-cases/complex-scenarios/: advanced-dead-code.js  nested-conditions.js
test-cases/simple-code/: dead-code-elimination.js  (+4 more)
tests/: complex-scenarios.test.js  dead-code-elimination.test.js  isolated-function-call.test.js  jsx-conditional-rendering.test.js  simple-code.test.js  webpack-bundles.test.js
(+13 files in other folders)
